--- a/candidatos/templates/dashboard.html
+++ b/candidatos/templates/dashboard.html
@@ -583,9 +583,9 @@
                 </div>
                 
                 <div class="flex items-center">
-                    <input type="checkbox" name="factor_actitud_aplica" id="id_factor_actitud_aplica"
+                    <input type="checkbox" name="factor_aptitud_aplica" id="id_factor_aptitud_aplica"
                            class="h-4 w-4 text-yellow-600 border-gray-300 rounded focus:ring-yellow-500">
-                    <label for="id_factor_actitud_aplica" class="text-xs font-medium text-gray-700 ml-2 select-none">¿Aplica Contratación por Factor Actitud?</label>
+                    <label for="id_factor_aptitud_aplica" class="text-xs font-medium text-gray-700 ml-2 select-none">¿Aplica Contratación por Factor Actitud?</label>
                 </div>
             </div>
 
